--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,16 @@
 /.pnp
 .pnp.js
 api/node_modules/
+client/node_modules
+client/.pnp
 
 # testing
 /coverage
+client/coverage
 
 # production
 /build
+client/build
 
 # misc
 .DS_Store
@@ -22,3 +26,5 @@ api/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
